--- a/html/index.html
+++ b/html/index.html
@@ -25,7 +25,7 @@
                     <i class="fas fa-lock"></i>
                     <input type="password" placeholder="Password" />
                 </div>
-                <input type="submit" value="Login" class="btn color" />
+                <input type="submit" value="Login" class="color" />
                 <a href="" class="social-text">Forgot Your Password?</a>
             </form>
         </div>
