--- a/html/users.html
+++ b/html/users.html
@@ -310,17 +310,16 @@
                                     <input type="password" name="" id="registration_popup_right_profile_password" required autocomplete="off">
                                     <label for="registration_popup_right_profile_password" class="registration_popup_right_profile_password">New Password</label>
                                 </div>
-                                <div class="form-text">
+                                <!-- <div class="form-text">
                                     <input type="password" name="" id="registration_popup_right_profile_password" required autocomplete="off">
                                     <label for="registration_popup_right_profile_password" class="registration_popup_right_profile_password">Retype Pasword</label>
-                                </div>
+                                </div> -->
                                 <div class="form-text">
                                     <select name="" id="registration_popup_right_profile_role" class="select" required>
-                                        <option value="Position" disabled selected>Role</option>
                                         <option value="Admin">Administrator</option>
                                         <option value="Cashier">Cashier</option>
                                         <option value="Accounting">Accounting</option>
-                                        <option value="Users">Users</option>
+                                        <option value="Users" selected>Users</option>
                                     </select>
                                 </div>
                                 <div class="registration_popup_right_email_notification_box">
