--- a/html/profile.html
+++ b/html/profile.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/dahsboard.css">
     <link rel="stylesheet" href="../css/profile.css">
+    <link rel="stylesheet" href="../css/users.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i">
     <link rel="shortcut icon" href="../img/favicon/favicon.png" type="image/x-icon">
     <link rel="icon" href="../img/favicon/favicon.png" type="image/x-icon">
@@ -154,10 +155,6 @@
                         <a href="#">
                             <img src="../img/1.jpeg" alt="">
                         </a>
-                        <!-- <div class="u-text">
-                            <h4>Nickname</h4>
-                            <p>Position</p>
-                        </div> -->
                         <div class="dropdowns hidden">
                             <h4>Name Surname</h4>
                             <p>Position</p>
@@ -179,10 +176,7 @@
             </header>
             <div class="jumbotron">
                 <div class="registration_jumbotron">
-                    <div class="registration_popup">
-                        <!-- <div class="registration_popup_cancel" id="registration_popup_cancel">
-                            <img src="../img/cancel.svg" width="100%" height="100%" alt="" id="prfimg">
-                        </div> -->
+                    <div class="registration_profile_popup">
                         <form action="">
                             <div class="registration_popup_left">
                                 <h1>Personal Information</h1>
@@ -257,7 +251,7 @@
                                         <label for="payment_closed">Incomes Closed</label>
                                     </div>
                                 </div>
-                                <input type="submit" value="Create" class="create" id="create">
+                                <input type="submit" value="Submit" class="create" id="create">
                             </div>
                         </form>
                     </div>
