--- a/html/users.html
+++ b/html/users.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/dahsboard.css">
+    <link rel="stylesheet" href="../css/profile.css">
     <link rel="stylesheet" href="../css/users.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i">
     <link rel="shortcut icon" href="../img/favicon/favicon.png" type="image/x-icon">
@@ -154,10 +155,6 @@
                         <a href="#">
                             <img src="../img/1.jpeg" alt="">
                         </a>
-                        <!-- <div class="u-text">
-                            <h4>Nickname</h4>
-                            <p>Position</p>
-                        </div> -->
                         <div class="dropdowns hidden">
                             <h4>Name Surname</h4>
                             <p>Position</p>
@@ -179,6 +176,12 @@
             </header>
             <div class="jumbotron">
                 <div class="registration_jumbotron">
+                    <div class="create-card" id="create_card">
+                        <div class="profile-card-header">
+                            <img src="../img/svg fontawesome/user.svg" alt="">
+                        </div>
+
+                    </div>
                     <div class="profile-card">
                         <div class="profile-card-header">
                             <img src="../img/1.jpeg" alt="">
@@ -207,70 +210,6 @@
                                 </a>
                             </li>
                         </ul>
-                    </div>
-                    <!-- <div class="profile-card">
-                        <div class="profile-card-header">
-                            <img src="../img/1.jpeg" alt="">
-                            <h1>George Darkos</h1>
-                            <h2>- ProJect Manager -</h2>
-                            <span>Role: <br> Administrator</span>
-                        </div>
-                        <ul class="profile-social-links">
-                            <li>
-                                <a href="#" data-text="Edit">
-                                    <img src="../img/svg fontawesome/Male-user-edit-icon.png">
-                                </a>
-                            </li>
-
-
-                            <li>
-                                <a href="#" data-text="Stop">
-                                    <img src="../img/svg fontawesome/deactivate.png">
-                                </a>
-                            </li>
-
-
-                            <li>
-                                <a href="#" data-text="Delete">
-                                    <img src="../img/svg fontawesome/delete.png">
-                                </a>
-                            </li>
-                        </ul>
-                    </div>
-                    <div class="profile-card">
-                        <div class="profile-card-header">
-                            <img src="../img/1.jpeg" alt="">
-                            <h1>George Darkos</h1>
-                            <h2>- ProJect Manager -</h2>
-                            <span>Role: <br> Administrator</span>
-                        </div>
-                        <ul class="profile-social-links">
-                            <li>
-                                <a href="#" data-text="Edit">
-                                    <img src="../img/svg fontawesome/Male-user-edit-icon.png">
-                                </a>
-                            </li>
-
-
-                            <li>
-                                <a href="#" data-text="Stop">
-                                    <img src="../img/svg fontawesome/deactivate.png">
-                                </a>
-                            </li>
-
-
-                            <li>
-                                <a href="#" data-text="Delete">
-                                    <img src="../img/svg fontawesome/delete.png">
-                                </a>
-                            </li>
-                        </ul>
-                    </div> -->
-                    <div class="create-card" id="create_card">
-                        <div class="profile-card-header">
-                            <img src="../img/svg fontawesome/user.svg" alt="">
-                        </div>
-
                     </div>
                     <div class="registration_popup">
                         <div class="registration_popup_cancel" id="registration_popup_cancel">
@@ -310,10 +249,6 @@
                                     <input type="password" name="" id="registration_popup_right_profile_password" required autocomplete="off">
                                     <label for="registration_popup_right_profile_password" class="registration_popup_right_profile_password">New Password</label>
                                 </div>
-                                <!-- <div class="form-text">
-                                    <input type="password" name="" id="registration_popup_right_profile_password" required autocomplete="off">
-                                    <label for="registration_popup_right_profile_password" class="registration_popup_right_profile_password">Retype Pasword</label>
-                                </div> -->
                                 <div class="form-text">
                                     <select name="" id="registration_popup_right_profile_role" class="select" required>
                                         <option value="Admin">Administrator</option>
