--- a/html/dashboard.html
+++ b/html/dashboard.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/dahsboard.css">
+    <link rel="stylesheet" href="../css/profile.css">
+    <link rel="stylesheet" href="../css/users.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i">
     <link rel="shortcut icon" href="../img/favicon/favicon.png" type="image/x-icon">
     <link rel="icon" href="../img/favicon/favicon.png" type="image/x-icon">
@@ -153,10 +155,6 @@
                         <a href="#">
                             <img src="../img/1.jpeg" alt="">
                         </a>
-                        <!-- <div class="u-text">
-                            <h4>Nickname</h4>
-                            <p>Position</p>
-                        </div> -->
                         <div class="dropdowns hidden">
                             <h4>Name Surname</h4>
                             <p>Position</p>
