--- a/html/dashboard.html
+++ b/html/dashboard.html
@@ -30,13 +30,13 @@
                         <a href="dashboard.html"><i class="fas fa-home"></i>Home</a>
                     </li>
                     <li>
-                        <a href="#"><i class="fas fa-cash-register"></i>Cash</a>
+                        <a href="cash.html"><i class="fas fa-cash-register"></i>Cash</a>
                     </li>
                     <li>
-                        <a href="#"><i class="fas fa-money-bill-wave"></i>Incomes</a>
+                        <a href="incomes.html"><i class="fas fa-money-bill-wave"></i>Incomes</a>
                     </li>
                     <li>
-                        <a href="#"><i class="fas fa-coins"></i>Expences</a>
+                        <a href="expences.html"><i class="fas fa-coins"></i>Expences</a>
                     </li>
                     <li>
                         <a href="#"><i class="fab fa-telegram-plane"></i>Chats</a>
@@ -174,7 +174,119 @@
 
                 </ul>
             </header>
-            <div class="jumbotron"></div>
+            <div class="jumbotron">
+                <div class="dashboard_jumbotron">
+                    <div class="dashboard_jumbotron_information_area">
+                        <p>Main Cash Information</p>
+                    </div>
+                    <div class="dashboard_jumbotron_save_area">
+                        <button><img src="../img/download.svg" alt="">Download</button>
+                        <button><img src="../img/printing.svg" alt="">Print</button>
+                        <button><img src="../img/floppy-disk.svg" alt="">Send To</button>
+
+                    </div>
+                    <div class="dashboard_statistic_area">
+                        <div class="dashboard_cash_statistic_area">
+                            <div class="dashboard_cash_amount_area">
+                                <div>
+                                    <span>1000 <span>AZN</span></span>
+                                    <p>Current Cash</p>
+                                </div>
+                                <div class="dashboard_cash_amount_area_percant">
+                                    <img src="../img/up-arrow.svg" alt="">
+                                    <span>20%</span>
+                                </div>
+                            </div>
+                            <div class="dashboard_cash_amount_area_info">
+                                <div>
+                                    <span>48%</span>
+                                    <p>Expences</p>
+                                </div>
+                                <div class="dashboard_cash_amount_area_percant">
+                                    <img src="../img/up-arrow.svg" alt="">
+                                    <span>20%</span>
+                                </div>
+                            </div>
+                            <div class="dashboard_cash_amount_area_info">
+                                <div>
+                                    <span>52%</span>
+                                    <p>Incomes</p>
+                                </div>
+                                <div class="dashboard_cash_amount_area_percant">
+                                    <img src="../img/down-arrow .svg" alt="">
+                                    <span>20%</span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="dashboard_cash_details_statistic_area">
+                            <div class="dashboard_cash_details_statistic_area_up">
+                                <div class="dashboard_cash_details_statistic_area_up_box">
+                                    <span>400 <span>AZN</span></span>
+                                    <div class="dashboard_cash_details_statistic_area_up_box_percant"><img src="../img/up-arrow.svg" alt=""><span>20%</span></div>
+                                    <p>Waiting Incomes</p>
+                                </div>
+                                <div class="dashboard_cash_details_statistic_area_up_box">
+                                    <span>300 <span>AZN</span></span>
+                                    <div class="dashboard_cash_details_statistic_area_up_box_percant"><img src="../img/up-arrow.svg" alt=""><span>20%</span></div>
+                                    <p>Expected Expences</p>
+                                </div>
+                                <div class="dashboard_cash_details_statistic_area_up_box">
+                                    <span>125</span>
+                                    <div class="dashboard_cash_details_statistic_area_up_box_percant"><img src="../img/down-arrow .svg" alt=""><span>20%</span></div>
+                                    <p>Unprocessed Requests</p>
+                                </div>
+                            </div>
+                            <div class="dashboard_cash_details_statistic_area_down">
+                                <div class="dashboard_cash_details_statistic_area_down_box">
+                                    <div class="dashboard_cash_details_statistic_area_down_box_chart_area">
+                                        <div class="pieID--micro-skills pie-chart--wrapper">
+                                            <div class="pie-chart">
+                                                <div class="pie-chart__pie"></div>
+                                                <ul class="pie-chart__legend">
+                                                    <li><em>User1</em><span>642</span></li>
+                                                    <li><em>User2</em><span>358</span></li>
+                                                    <li><em>User3</em><span>328</span></li>
+                                                    <li><em>User4</em><span>338</span></li>
+                                                </ul>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="dashboard_cash_details_statistic_area_down_box">
+                                    <div class="dashboard_cash_details_statistic_area_down_box_chart_area">
+                                        <div class="pieID--categories pie-chart--wrapper">
+                                            <div class="pie-chart">
+                                                <div class="pie-chart__pie"></div>
+                                                <ul class="pie-chart__legend">
+                                                    <li><em>User1</em><span>768</span></li>
+                                                    <li><em>User2</em><span>232</span></li>
+                                                    <li><em>User3</em><span>232</span></li>
+                                                    <li><em>User4</em><span>232</span></li>
+                                                </ul>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="dashboard_cash_details_statistic_area_down_box">
+                                    <div class="dashboard_cash_details_statistic_area_down_box_chart_area">
+                                        <div class="pieID--operations pie-chart--wrapper">
+                                            <div class="pie-chart">
+                                                <div class="pie-chart__pie"></div>
+                                                <ul class="pie-chart__legend">
+                                                    <li><em>User1</em><span>486</span></li>
+                                                    <li><em>User2</em><span>156</span></li>
+                                                    <li><em>User3</em><span>215</span></li>
+                                                    <li><em>User4</em><span>143</span></li>
+                                                </ul>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
             <footer class="footer"></footer>
         </div>
     </div>
