--- a/html/users.html
+++ b/html/users.html
@@ -30,13 +30,13 @@
                         <a href="dashboard.html"><i class="fas fa-home"></i>Home</a>
                     </li>
                     <li>
-                        <a href="#"><i class="fas fa-cash-register"></i>Cash</a>
+                        <a href="cash.html"><i class="fas fa-cash-register"></i>Cash</a>
                     </li>
                     <li>
-                        <a href="#"><i class="fas fa-money-bill-wave"></i>Incomes</a>
+                        <a href="incomes.html"><i class="fas fa-money-bill-wave"></i>Incomes</a>
                     </li>
                     <li>
-                        <a href="#"><i class="fas fa-coins"></i>Expences</a>
+                        <a href="expences.html"><i class="fas fa-coins"></i>Expences</a>
                     </li>
                     <li>
                         <a href="#"><i class="fab fa-telegram-plane"></i>Chats</a>
