--- a/html/dashboard-demo.html
+++ b/html/dashboard-demo.html
@@ -12,7 +12,7 @@
     <link rel="icon" href="../img/favicon/favicon.png" type="image/x-icon">
     <script src="https://kit.fontawesome.com/03990c771c.js" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-    <title>Cash Management System - Profile Page</title>
+    <title>Cash Management System - Home Page</title>
 </head>
 
 <body>
@@ -26,7 +26,7 @@
                         </a>
                     </li>
 
-                    <li>
+                    <li class=" active">
                         <a href="dashboard.html"><i class="fas fa-home"></i>Home</a>
                     </li>
                     <li>
@@ -41,7 +41,7 @@
                     <li>
                         <a href="#"><i class="fab fa-telegram-plane"></i>Chats</a>
                     </li>
-                    <li class=" active">
+                    <li>
                         <a href="users.html"><i class="fas fa-user-alt"></i>Users</a>
                     </li>
                     <li>
@@ -175,87 +175,7 @@
                 </ul>
             </header>
             <div class="jumbotron">
-                <div class="registration_jumbotron">
-                    <div class="registration_profile_popup">
-                        <form action="">
-                            <div class="registration_popup_left">
-                                <h1>Personal Information</h1>
-                                <img src="../img/403017-512.png" alt="" id="profile_image">
-                                <input type="file" name="" value="../img/403017-512.png" id="registration_popup_left_profile_photo" accept="image/*">
-                                <label for="registration_popup_left_profile_photo" class="registration_popup_left_profile_photo">Choose Photo</label>
-                                <div class="form-text">
-                                    <input type="text" name="" id="registration_popup_left_profile_name" required autocomplete="off">
-                                    <label for="registration_popup_left_profile_name" class="registration_popup_left_profile_name">Enter Name</label>
-                                </div>
-                                <div class="form-text">
-                                    <input type="text" name="" id="registration_popup_left_profile_surname" required autocomplete="off">
-                                    <label for="registration_popup_left_profile_surname" class="registration_popup_left_profile_surname">Enter Surname</label>
-                                </div>
-                                <div class="form-text">
-                                    <input type="text" name="" id="registration_popup_left_profile_nickname" required autocomplete="off">
-                                    <label for="registration_popup_left_profile_nickname" class="registration_popup_left_profile_nickname">Enter Shortname</label>
-                                </div>
-                                <div class="form-text">
-                                    <input type="text" name="" id="registration_popup_left_profile_email" required autocomplete="off">
-                                    <label for="registration_popup_left_profile_email" class="registration_popup_left_profile_email">Enter Email</label>
-                                </div>
-                                <div class="form-text">
-                                    <input type="text" name="" id="registration_popup_left_profile_position" required autocomplete="off">
-                                    <label for="registration_popup_left_profile_position" class="registration_popup_left_profile_position">Enter Position</label>
-                                </div>
 
-                            </div>
-                            <div class="registration_popup_right">
-                                <h1>Business Information</h1>
-                                <div class="form-text">
-                                    <input type="password" name="" id="registration_popup_right_profile_password" required autocomplete="off">
-                                    <label for="registration_popup_right_profile_password" class="registration_popup_right_profile_password">New Password</label>
-                                </div>
-                                <div class="form-text">
-                                    <input type="password" name="" id="registration_popup_right_profile_password" required autocomplete="off">
-                                    <label for="registration_popup_right_profile_password" class="registration_popup_right_profile_password">Retype Pasword</label>
-                                </div>
-                                <div class="form-text">
-                                    <select name="" id="registration_popup_right_profile_role" class="select" required>
-                                        <option value="Position" disabled selected>Role</option>
-                                        <option value="Admin">Administrator</option>
-                                        <option value="Cashier">Cashier</option>
-                                        <option value="Accounting">Accounting</option>
-                                        <option value="Users">Users</option>
-                                    </select>
-                                </div>
-                                <div class="registration_popup_right_email_notification_box">
-                                    <p>Get Email Notifications:</p>
-                                    <div>
-                                        <input type="checkbox" name="" id="payment_received">
-                                        <label for="payment_received">Incomes Received</label>
-                                    </div>
-                                    <div>
-                                        <input type="checkbox" name="" id="expences_rejected">
-                                        <label for="expences_rejected">Expences Rejected</label>
-                                    </div>
-                                    <div>
-                                        <input type="checkbox" name="" id="expences_paided">
-                                        <label for="expences_paided">Expences Paided</label>
-                                    </div>
-                                    <div>
-                                        <input type="checkbox" name="" id="new_inbox">
-                                        <label for="new_inbox">Request Commented</label>
-                                    </div>
-                                    <div>
-                                        <input type="checkbox" name="" id="expences_closed">
-                                        <label for="expences_closed">Expences Closed</label>
-                                    </div>
-                                    <div>
-                                        <input type="checkbox" name="" id="payment_closed">
-                                        <label for="payment_closed">Incomes Closed</label>
-                                    </div>
-                                </div>
-                                <input type="submit" value="Submit" class="create" id="create">
-                            </div>
-                        </form>
-                    </div>
-                </div>
             </div>
             <footer class="footer"></footer>
         </div>
